--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   "homepage": "https://github.com/zhuhuijun/myshop",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^0.8.2",
     "cookie-parser": "^1.4.0",
+    "crypto": "0.0.3",
     "debug": "^2.2.0",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "express-session": "^1.12.0",
     "mongoose": "^4.2.3",
     "morgan": "^1.6.1",
     "serve-favicon": "^2.3.0"
